[package]
name = "vina"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "ai generated visual novel"
repository = "https://github.com/PrideHacks2023/vina"

[workspace]
members = [
    "crates/vina_codegen",
    "crates/vina_story"
]

[features]

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
dotenvy = "0.15.7"
vina_codegen = {path = "crates/vina_codegen"}
vina_story = {path = "crates/vina_story"}


