[package]
name = "vina"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "ai generated visual novel"
repository = "https://github.com/PrideHacks2023/vina"

[workspace]
members = [
    "crates/vina_story",
    "crates/vina_sd",
]

[features]

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }

ron = { version = "0.8" }

dotenv = "0.15.0"
dotenvy = "0.15.7"
dircpy = "0.3.14"

vina_story = {path = "crates/vina_story"}
vina_sd = { path = "crates/vina_sd" }

anyhow = "1.0.71"
