[package]
name = "vina_story"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = ""
repository = "https://github.com/PrideHacks2023/vina"

[[bin]]
name = "vina_story"
path = "src/main.rs"

[features]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rustube = { version = "0.6", features = ["blocking"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
env_logger = "0.10"

thiserror = "1"
anyhow = "1"
lazy_static = "1.4"
rand = "0.8"
